Add year of creation to the table.

--- a/src/app/components/students/dashboard/past-proyect-proposals/past-proyect-proposals.component.html
+++ b/src/app/components/students/dashboard/past-proyect-proposals/past-proyect-proposals.component.html
@@ -15,15 +15,15 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre del proyecto</th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
             </ng-container>
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef> Descripción </th>
-                <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                <td mat-cell *matCellDef="let element"> {{ element.description }} </td>
             </ng-container>
             <ng-container matColumnDef="fair">
-                <th mat-header-cell *matHeaderCellDef> Calificación </th>
-                <td mat-cell *matCellDef="let element"> {{element.fair}} </td>
+                <th mat-header-cell *matHeaderCellDef> Año de la feria </th>
+                <td mat-cell *matCellDef="let element"> {{ element.fair.startDate | date:'yyyy' }} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
