--- a/src/app/components/students/dashboard/protocol-list/protocol-list.component.css
+++ b/src/app/components/students/dashboard/protocol-list/protocol-list.component.css
@@ -19,13 +19,12 @@
 }
 
 .protocols-content {
-    padding-top: 16%;
     padding-bottom: 1rem;
     height: 85%;
     max-height: 85%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     overflow: scroll;
 }
 
