--- a/src/app/components/students/dashboard/protocol-list/protocol-list.component.html
+++ b/src/app/components/students/dashboard/protocol-list/protocol-list.component.html
@@ -13,12 +13,12 @@
     </div>
     <div class="protocols-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="number">
-                <th mat-header-cell *matHeaderCellDef> Protocol number</th>
-                <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Numero de protocolo</th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Description </th>
+                <th mat-header-cell *matHeaderCellDef>Descripcion</th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
