--- a/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
+++ b/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
@@ -15,18 +15,14 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre del proyecto</th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <td mat-cell *matCellDef="let element" [routerLink]="['/student/project', element.id]" routerLinkActive="router-link-active"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef> Descripción </th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
-            <ng-container matColumnDef="grade">
-                <th mat-header-cell *matHeaderCellDef> Calificación </th>
-                <td mat-cell *matCellDef="let element"> {{element.grade}} </td>
-            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
-</div>
+</div>/
