--- a/src/app/components/students/dashboard/create-project/create-project.component.html
+++ b/src/app/components/students/dashboard/create-project/create-project.component.html
@@ -40,7 +40,7 @@
                                 <input type="text" matInput formControlName="IdFair">
                             </mat-form-field>
                         </mat-form-field>
-                        <!-- <mat-checkbox formControlName="creatorLeader">Seleccionar el usuario actual como lider del proyecto?</mat-checkbox> -->
+                        <mat-checkbox >Seleccionar el usuario actual como lider del proyecto?</mat-checkbox>
                     </div>
                 </form>
             </div>
@@ -55,7 +55,7 @@
                     <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
                         <div class="ng-template-content">
                             <h3>
-                                Drop files to upload here
+                                Arrastre los documentos aquí
                             </h3>
                             <button id="sumbit-button" (click)="openFileSelector()" mat-raised-button color="primary">Browse files</button>
                         </div>
@@ -65,9 +65,9 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>Name</th>
-                                <th>Size</th>
-                                <th>Last Modified Date</th>
+                                <th>Nombre</th>
+                                <th>Tamaño</th>
+                                <th>última fecha de modificación</th>
                             </tr>
                         </thead>
                         <tbody class="upload-name-style">
