--- a/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
@@ -4,40 +4,50 @@
         <h3>Crea una cuenta para un nuevo juez</h3>
     </div>
     <form class="add-form" [formGroup]="createJudgeForm" (ngSubmit)="onSubmit()">
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <!--for name-->
             <mat-label>Nombre del juez</mat-label>
             <input type="text" matInput formControlName="NameFormControl">
         </mat-form-field>
         <!--for last-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Apellidos del juez</mat-label>
             <input type="text" matInput formControlName="LastFormControl">
         </mat-form-field>
         <!--for username-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Nombre de usuario del juez</mat-label>
             <input type="text" matInput formControlName="UsernameFormControl">
         </mat-form-field>
         <!--for email-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Correo del juez</mat-label>
             <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
         </mat-form-field>
         <!--for phone-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Telefono del juez</mat-label>
             <input type="phone" matInput formControlName="PhoneFormControl" placeholder="Ej. smith@gmail.com">
         </mat-form-field>
         <!--for password-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Contraseña del juez</mat-label>
             <input type="password" matInput formControlName="PasswordFormControl">
         </mat-form-field>
         <!--for id-->
-        <mat-form-field class="flex-container" appearance="fill">
+        <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Cédula del juez</mat-label>
             <input type="text" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
+        </mat-form-field>
+
+        <mat-form-field class="flex-container" appearance="outline">
+            <mat-label>Empresa donde pertenece el juez</mat-label>
+            <input type="text" matInput formControlName="InstitutionFormControl" placeholder="XX-XXXX-XXXX">
+        </mat-form-field>
+
+        <mat-form-field class="flex-container" appearance="outline">
+            <mat-label>Posicion del Juez</mat-label>
+            <input type="text" matInput formControlName="PositionFormControl" placeholder="XX-XXXX-XXXX">
         </mat-form-field>
         <button mat-raised-button id="submit-button" class="add-button">Crear Juez</button>
     </form>
