--- a/src/app/components/students/dashboard/project-details/project-details.component.html
+++ b/src/app/components/students/dashboard/project-details/project-details.component.html
@@ -42,7 +42,7 @@
             <div class="button-group space">
                 <button class="button" mat-raised-button>Desglose de nota</button>
                 <button class="button" mat-raised-button>Recomendaciones</button>
-                <button class="button" mat-raised-button>Apelar</button>
+                <button class="button" (click)="createClaim()" mat-raised-button>Apelar</button>
             </div>
         </div>
     </div>
