--- a/src/app/components/judges/dashboard/project-to-qualify-details/project-to-qualify-details.component.html
+++ b/src/app/components/judges/dashboard/project-to-qualify-details/project-to-qualify-details.component.html
@@ -15,7 +15,7 @@
                 <h3>{{ group_member }}</h3>
             </div>
             <h3 class="space">Categoria: {{ category }}</h3>
-            <button class="buttonDescargar" mat-raised-button>Descargar documentación</button>
+            <!-- <button class="buttonDescargar" mat-raised-button>Descargar documentación</button> -->
         </div>
     </div>
     <mat-divider vertical style="height:85%; margin: 0 5%;"></mat-divider>
@@ -29,7 +29,7 @@
         <div class="details-content">
             <h3 class="space">Seleccione alguna de las 3 opciones a continuación: </h3>
             <div class="button-group space">
-                <button class="button" mat-raised-button [routerLink]="['/judges/project-qualify/1']">Calificar proyecto</button>
+                <button class="button" mat-raised-button [routerLink]="['/judges/project-qualify/', group_number ]">Calificar proyecto</button>
                 <button class="button" mat-raised-button (click)="openRecomendation()">Dar recomendación</button>
                 <button class="button" mat-raised-button (click)="openEmails()">Contactar estudiantes</button>
             </div>
