--- a/src/app/components/students/dashboard/past-proyect-proposals/past-proyect-proposals.component.html
+++ b/src/app/components/students/dashboard/past-proyect-proposals/past-proyect-proposals.component.html
@@ -6,7 +6,7 @@
                 <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Filtrar proyectos</mat-label>
                     <input type="text" matInput (keyup)="applyFilter($event)" >
-                    <mat-icon matSuffix>Buscar</mat-icon>
+                    <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
             </form>
         </div>
