--- a/src/app/components/judges/dashboard/recomendations-popup/recomendations-popup.component.html
+++ b/src/app/components/judges/dashboard/recomendations-popup/recomendations-popup.component.html
@@ -1,13 +1,23 @@
 <div class="modal-header">
-    <h3 class="modal-title" id="modal-basic-title">Recomendaciones</h3>
+    <h2 class="modal-title" style="margin-bottom: 0;">Crear apelacion para el proyecto</h2>
+    <button type="button" class="btn btn-outline-danger close-btn" (click)="dismiss()">&times;
+    </button>
 </div>
-<div class="modal-body">
-    <form class="recomendations-form">
-        <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Recomendaciones para el grupo</mat-label>
-            <textarea matInput placeholder="Ej. Se podría mejorar la..."></textarea>
-        </mat-form-field>
-    </form>
-    
-    <button class="button" mat-raised-button (click)="onNoClick()">Aceptar</button>
+<div class="modal-body container" ngbAutofocus>
+    <form [formGroup]="createRecommendationForm" (ngSubmit)="onSubmit()" novalidate>
+        
+            <div class="row">
+                <div class="col-12">
+                    <mat-form-field class="full-width" appearance="legacy">
+                        <mat-label>Reclamo</mat-label>
+                        <input class="full-width" matInput formControlName="recommendation">
+                    </mat-form-field>
+                </div>
+            </div>
+        
+        <div class="modal-footer ">
+            <button mat-raised-button type="button" id="submit-button" class="cancel-button" (click)="decline()">Cancelar</button>
+            <button mat-raised-button type="button" id="submit-button" class="add-button" (click)="accept()">Subir recomendacion</button>
+        </div>
+    </form>    
 </div>
