Fix reset-password component

--- a/src/app/components/administrator/dashboard/settings/reset-password/reset-password.component.html
+++ b/src/app/components/administrator/dashboard/settings/reset-password/reset-password.component.html
@@ -8,11 +8,11 @@
         <div class="flex-container">
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Nueva contraseña</mat-label>
-                <input type="text" matInput formControlName="NewPasswordFormControl">
+                <input type="password" matInput formControlName="NewPasswordFormControl">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Confirmación de nueva contraseña</mat-label>
-                <input type="text" matInput formControlName="ConfirmPasswordFormControl">
+                <input type="password" matInput formControlName="ConfirmPasswordFormControl">
             </mat-form-field>
         <button id="sumbit-button" class="" type="submit" mat-raised-button color="primary">Actualizar Contraseña</button>
         </div>
