Fix small details in pop ups

--- a/src/app/components/administrator/dashboard/add-users/add-students/add-students.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-students/add-students.component.html
@@ -37,11 +37,11 @@
         <div class="rows">
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Correo del estudiante</mat-label>
-                <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
+                <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Telefono del estudiante</mat-label>
-                <input type="phone" matInput formControlName="PhoneFormControl" placeholder="Ej. smith@gmail.com">
+                <input type="phone" matInput formControlName="PhoneFormControl" placeholder="8888-8888">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Contraseña del estudiante</mat-label>
