--- a/src/app/components/students/dashboard/create-project/create-project.component.html
+++ b/src/app/components/students/dashboard/create-project/create-project.component.html
@@ -68,7 +68,7 @@
                             <h3>
                                 Arrastre los documentos aquí
                             </h3>
-                            <button id="sumbit-button" (click)="openFileSelector()" mat-raised-button color="primary">Browse files</button>
+                            <button id="sumbit-button" (click)="openFileSelector()" mat-raised-button color="primary">Buscar documento</button>
                         </div>
                     </ng-template>
                 </ngx-file-drop>
