--- a/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
@@ -39,13 +39,13 @@
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Empresa donde pertenece el juez</mat-label>
-                    <input type="text" matInput formControlName="InstitutionFormControl" placeholder="XX-XXXX-XXXX">
+                    <input type="text" matInput formControlName="InstitutionFormControl">
                 </mat-form-field>
             </div>
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
                     <mat-label>Posicion del Juez</mat-label>
-                    <input type="text" matInput formControlName="PositionFormControl" placeholder="XX-XXXX-XXXX">
+                    <input type="text" matInput formControlName="PositionFormControl">
                 </mat-form-field>
             </div>
         </div>
@@ -53,7 +53,7 @@
         <div class="row">
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Correo del juez</mat-label>
-                <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
+                <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Contraseña del juez</mat-label>
