--- a/src/app/components/administrator/dashboard/edit-users/edit-judges/edit-judges.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-judges/edit-judges.component.html
@@ -17,7 +17,7 @@
         <!--for email-->
         <mat-form-field class="flex-container" appearance="outline">
             <mat-label>Correo del juez</mat-label>
-            <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
+            <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com">
         </mat-form-field>
         <!--for username-->
         <mat-form-field class="flex-container" appearance="outline">
