--- a/src/app/components/judges/dashboard/students-list/students-list.component.html
+++ b/src/app/components/judges/dashboard/students-list/students-list.component.html
@@ -16,19 +16,23 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <td mat-cell *matCellDef="let element" [routerLink]="['/judges/project-details', element.projectId]" routerLinkActive="router-link-active"> {{element.name}} </td>
             </ng-container>
-            <ng-container matColumnDef="lastname">
+            <ng-container matColumnDef="lastName">
                 <th mat-header-cell *matHeaderCellDef> Apellido </th>
-                <td mat-cell *matCellDef="let element"> {{element.lastname}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
             </ng-container>
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef> Correo </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
             <ng-container matColumnDef="phoneNumber">
-                <th mat-header-cell *matHeaderCellDef> Telefono </th>
+                <th mat-header-cell *matHeaderCellDef> Teléfono </th>
                 <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+            </ng-container>
+            <ng-container matColumnDef="projectName">
+                <th mat-header-cell *matHeaderCellDef> Proyecto </th>
+                <td mat-cell *matCellDef="let element" [routerLink]="['/judges/project-details', element.projectId]" routerLinkActive="router-link-active"> {{element.projectName}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
